fix(landing): fix landing cells inside mock projects being too big

--- a/frontend/src/styles/_landing.scss
+++ b/frontend/src/styles/_landing.scss
@@ -514,6 +514,7 @@ $cell-weekdays-width: 33px;
 }
 
 .landing-habits {
+  --is-big: 0;
   display: grid;
   grid-template-rows: 17px;
   row-gap: 2px;
